Phase 4 of version updating